--- a/style.css
+++ b/style.css
@@ -277,6 +277,12 @@ text-align: center;
 	align-items: center;
 }
 
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+  }
+
 
 
 
